=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2011-04-28  10:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-18
Wrap file output for MPI operation in tbtrans

In tbtrans some auxiliary files were written to by all the nodes.

(+ Also, make sure that the transiesta capability appears at
the top of the transiesta output file)

modified:
  Src/Makefile
  Util/TBTrans/tbtrans.F

------------------------------------------------------------------------
2011-04-28  10:50:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-17
Avoid reporting unstable inversion in pulayx

Typically, inversion problems in the DIIS procedure occur when the
error estimate for a step is very small compared to the previous
ones. This is harmless, and the reporting of a failure in the output
file is confusing.

In case it is needed, a hook to allow a full diagnosis 
can be compiled in with the preprocessor flag

DEBUG_PULAY_INVERSE

(+ Also, initialize "found" variable in new_dm.F in transiesta mode)

modified:
  Src/m_pulay.F90
  Src/new_dm.F

------------------------------------------------------------------------
2011-04-28  09:30:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-16
Increase field sizes in OCCS file

Some fields overflowed when a large number of k-points 
was used.

modified:
  Src/diagk.F
  Src/diagk_file.F

------------------------------------------------------------------------
2011-04-28  08:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-15
Fix mixing bug in TranSiesta

In TranSiesta mode, the program first carries out a calculation
at zero bias and with periodic boundary conditions, just as a 
normal Siesta calculation. During the self-consistent cycle the