@@ -5,6 +5,16 @@
 ** CHANGES ALONG siesta-3.0 branch
 
 ------------------------------------------------------------------------
+2011-04-28  11:00:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-19
+Make auxiliary variable double precision in line minimization
+
+In routine linmin4, the complex variable "c" was declared
+as single-precision. It is now a double.
+
+modified:
+  Src/cgwf.F
+
+------------------------------------------------------------------------
 2011-04-28  10:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-18
 Wrap file output for MPI operation in tbtrans
 
